<resources>
    <string name="app_name">Visits</string>
    <string name="now">Now</string>
    <string name="hyperTrackPublishKey">paste your publishable key here</string>
    <string name="channel_name">HyperTrack Notifications</string>
    <string name="channel_id">HyperTrack</string>
    <string name="channel_description">HyperTrack Visits app notifications</string>
    <string name="file_provider_authority" translatable="false">com.hypertrack.logistics.android.github.fileprovider</string>
    <string name="replace_picture">Replace Picture</string>
    <string name="location">Location</string>
    <string name="customer_note">Customer Note</string>
    <string name="items">Items</string>
    <string name="visit_notes">Visit Notes</string>
    <string name="visit_picture">Proof of Visit</string>
    <string name="take_picture">Take Picture</string>
    <string name="hypertrack_logistics_app">HyperTrack Visits App</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="cancel">Cancel Visit</string>
    <string name="no_planned_visits">No trips assigned to you</string>
    <string name="account_login_header_text">Sign into your account</string>
    <string name="login_hint">Cannot get login from the deeplink. Sign in or contact your manager to get the link.</string>
    <string name="email_address">Business email</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="account_login_error_message">Can\'t login with provided credentials</string>
    <string name="check_login_credentials_hint" />
    <string name="empty_string" />
    <string name="vist_note_updated">Visit note was updated</string>
    <string name="cannot_create_file_msg">Can\'t create a file for a picture. Check if there\'s enough space</string>
    <string name="whitelisting_rational">Disable power optimization to make tracking durable</string>
    <string name="clock_hint_tracking_on">Pressing the switch will stop location tracking</string>
    <string name="clock_hint_tracking_off">Pressing the switch will start location tracking</string>
    <string name="cancel_visit_confirmation">Are you sure you want to cancel this visit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="duration">%1$d hr %2$d min</string>
    <string name="duration_minutes">%1$d min</string>
    <string name="steps">%1$d steps</string>
    <string name="miles">%s mi</string>
    <string name="kms">%s km</string>
    <string name="feet">%s ft</string>
    <string name="meters">%s m</string>
    <string name="close">Close</string>
    <string name="device_id">Device ID</string>
    <string name="app_version">App Version</string>
    <string name="bottom_app_bar_logo_content_desc">Opens history timeline</string>
    <string name="retry">Retry</string>
    <string name="photo_upload_unknown_error">Unknown error during uploading photo</string>
    <string name="history_error">Error when loading history</string>
    <string name="skip">Skip</string>
    <string name="wrong_code">Code is incorrect</string>
    <string name="code_from_clipboard">Code have pasted from clipboard</string>
    <string name="password_too_short">Password length must be 8 characters or more </string>
    <string name="invalid_email">Invalid email</string>
    <string name="editable_key_hint">Field name</string>
    <string name="editable_value_hint">Value</string>
    <string name="directions_button">Show in Maps app</string>
    <string name="address_hint">Please check the address below and if it empty or wrong, enter the correct value (if possible)</string>
    <string name="notification_important_channel_name">HyperTrack Important Notifications</string>
    <string name="notification_important_channel_description">HyperTrack Visits app notifications</string>
    <string name="notification_new_trip">A new trip was assigned to you</string>
    <string name="notification_service_was_terminated">Tracking service was terminated</string>
    <string name="notification_geofence_enter">Entered geofence</string>
    <string name="notification_geofence_exit">Exited geofence</string>
    <string name="notification_geofence_visit_text">%s at %s</string>
    <string name="notification_geofence_visit_text_without_name">At %s</string>
    <string name="splash_screen_invalid_link">Invalid link: %s</string>
    <string name="splash_screen_no_key">No publishable_key</string>
    <string name="splash_screen_no_username">No email or phone_number</string>
    <string name="splash_screen_duplicate_fields">Duplicate fields</string>
    <string name="splash_screen_deprecated_deeplink">The deeplink you\'re using is deprecated. Please contact your manager to get a new one</string>
    <string name="sign_in_deeplink_issues">Having issues with the deeplink?</string>
    <string name="sign_in_deeplink_hint">In case if you have a deeplink \n you have to click it to log in</string>
    <string name="sign_in_paste_deeplink_hint">Paste your deeplink here</string>
    <string name="sign_in_hardware_id">Hardware ID</string>
    <string name="sign_in_deeplink_invalid_format">Invalid deeplink format.\nCorrect format: \n\n <b>https://hypertrack-logistics.app.link/\u2026</b></string>
    <string name="permissions_allow_location_access">Please allow Location permissions</string>
    <string name="permission_rationale_1">This app collects activity and location data \n to  manage your work on the move \n even when the app is closed or not in use</string>
    <string name="permission_rationale_2">We use this data to:\n
        - Show your movement history\n
        - Optimize routes\n
        - Mark places you visit\n
        - Make expense claims easier\n
        - Compute daily stats \n\t\t(like total driven distance)
    </string>
    <string name="permission_rationale_3">We also need to access accelerometer to detect when you drive or walk</string>
    <string name="continue_btn_text">Allow</string>
    <string name="whitelisting_btn_text">Go to Settings</string>
    <string name="allow_background_location_access">Allow All the Time Location Access</string>
    <string name="background_location_permission_rationale">The permission is required to automatically start tracking location based on your work schedule (without you having to open app). The app will always show a notification when tracking is active.</string>
    <string name="background_location_permission_option_hint">To adjust the permission press</string>
    <string name="visits_management_clocked_in">You are clocked in</string>
    <string name="visits_management_clocked_out">You are clocked out</string>
    <string name="visits_management_device_deleted">"Device is deleted"</string>
    <string name="visits_management_permissions_not_granted">Permissions are not granted</string>
    <string name="visits_management_location_services_disabled">Location services are disabled</string>
    <string name="visits_management_generic_tracking_error">Tracking failure</string>
    <string name="current_trip">Current trip</string>
    <string name="current_trip_add_order">Add order</string>
    <string name="current_trip_complete">Complete</string>
    <string name="current_trip_complete_confirmation">Are you sure you want to complete the trip?</string>
    <string name="add_order">Add order</string>
    <string name="add_order_create">@string/add_order</string>
    <string name="timeline_summary">Driven</string>
    <string name="timeline_summary_template_distance">/ %s</string>
    <string name="timeline_summary_template_duration">%s</string>
    <string name="timeline_empty_summary">No tracked movement for this day</string>
    <string name="timeline_inactive_reason_location_permissions_denied">Location permissions denied</string>
    <string name="timeline_inactive_reason_location_services_disabled">Location services disabled</string>
    <string name="timeline_inactive_reason_motion_activity_permissions_denied">Activity permission denied</string>
    <string name="timeline_inactive_reason_motion_activity_services_disabled">Activity service disabled</string>
    <string name="timeline_inactive_reason_motion_activity_services_unavailable">Activity service unavailable</string>
    <string name="timeline_inactive_reason_tracking_stopped">Tracking stopped</string>
    <string name="timeline_inactive_reason_tracking_service_terminated">Tracking service terminated</string>
    <string name="timeline_inactive_reason_tracking_service_terminated_excessive_resource_usage">Tracking service terminated by excessive resources usage</string>
    <string name="timeline_inactive_reason_tracking_service_terminated_by_reboot">Tracking service terminated by OS reboot</string>
    <string name="timeline_inactive_reason_location_unavailable">GPS signal lost</string>
    <string name="timeline_inactive_reason_disconnected">Device disconnected</string>
    <string name="timeline_inactive_reason_sdk_killed_by_permissions">Tracking service terminated by changing permissions</string>
    <string name="timeline_inactive_reason_sdk_killed_by_user">Tracking service terminated by user</string>
    <string name="timeline_inactive_reason_sdk_killed_crashed">Tracking service terminated by app crash</string>
    <string name="timeline_inactive_reason_location_permission_when_in_use_background">Background location permissions denied</string>
    <string name="timeline_inactive_reason_battery_saver">Location event were blocked by battery saver</string>
    <string name="timeline_inactive_reason_unexpected">Unknown outage</string>
    <string name="timeline_geotag_dialog_id">Geotag ID</string>
    <string name="timeline_geotag_dialog_title">Geotag at %s</string>
    <string name="timeline_geotag_dialog_metadata">Geotag metadata</string>
    <string name="summary_total_tracking_time">Tracked duration</string>
    <string name="summary_drive">Drives</string>
    <string name="summary_walk">Walks</string>
    <string name="summary_stop">Stops</string>
    <string name="orders_list">Orders</string>
    <string name="orders_list_current_trip">Current trip</string>
    <string name="orders_list_no_trip">You don\'t have orders</string>
    <string name="orders_list_eta">Estimated arrival time: %s</string>
    <string name="orders_list_eta_unavailable">Estimated arrival time unavailable</string>
    <string name="order_complete">Complete</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_snooze">Snooze</string>
    <string name="order_unsnooze">Un-Snooze</string>
    <string name="order_save_note">Save</string>
    <string name="order_cancel_note">Discard</string>
    <string name="order_snooze_confirmation">Are you sure you want to SNOOZE this order?</string>
    <string name="order_cancel_confirmation">Are you sure you want to CANCEL this order?</string>
    <string name="order_complete_confirmation">Are you sure you want to COMPLETE this order?</string>
    <string name="order_note_hint">Enter order notes</string>
    <string name="order_already_completed">Order is already completed</string>
    <string name="order_already_canceled">Order is already canceled</string>
    <string name="order_status">Status</string>
    <string name="order_id">Order Id</string>
    <string name="order_completed_at">Completed at</string>
    <string name="order_scheduled_at">Scheduled at</string>
    <string name="order_picked_up">Picked up</string>
    <string name="order_scheduled_at_template">Order scheduled at %s</string>
    <string name="add_geotag_add_field">Add data field</string>
    <string name="add_geotag_hint">Create a geotag to mark specific location and add additional info to this mark</string>
    <string name="add_geotag_create_button">Create</string>
</resources>