<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddGeotagHint"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_geotag_hint"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvAddGeotagError"
        style="@style/ErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_geotag_hint"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvAddGeotagHint"
        tools:visibility="visible" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddGeotagError" />

    <TextView
        android:id="@+id/bAddField"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_plus"
        android:gravity="center"
        android:paddingRight="8dp"
        android:text="@string/add_geotag_add_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGeotagMetadata"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAddField" />

    <Button
        android:id="@+id/bCreateGeotag"
        style="@style/DisablableActionButtonStyle"
        android:layout_marginBottom="32dp"
        android:text="@string/add_geotag_create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

