<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            app:srcCompat="@drawable/ic_geotag_marker"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingRight="32dp"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Text" />

        <TextView
            android:id="@+id/tvGeotagAddress"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Text"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvRouteTo"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toEndOf="@+id/ivRouteTo"
            app:layout_constraintTop_toBottomOf="@+id/tvGeotagId"
            tools:text="Text" />

        <TextView
            android:id="@+id/tvGeotagId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/bCopyId"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/tvGeotagMetadata"
            tools:text="TextView TextView TextView TextView TextView TextView TextView TextViewTextView TextView TextView" />

        <ImageView
            android:id="@+id/bCopyId"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="21dp"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tvGeotagId"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvGeotagId"
            app:srcCompat="@drawable/ic_copy"
            app:tint="#44000000"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/bCopyMetadata"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tvGeotagMetadata"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvGeotagMetadata"
            app:srcCompat="@drawable/ic_copy"
            app:tint="#44000000"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivRouteTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvRouteTo"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvRouteTo"
            app:srcCompat="@drawable/ic_ht_trip" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeline_geotag_dialog_id"
            app:layout_constraintBottom_toBottomOf="@+id/tvGeotagId"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvGeotagId" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ht_info"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvGeotagMetadata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/bCopyMetadata"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView TextView" />

        <TextView
            android:id="@+id/textView5"
            style="@style/SmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/timeline_geotag_dialog_metadata"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvGeotagAddress"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/bCloseDialog"
        style="@style/TextButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/close" />
</LinearLayout>
